test(app): add geo location parse